--- a/LT_UI/tasks/templates/tasks/task_form_wrapper.html
+++ b/LT_UI/tasks/templates/tasks/task_form_wrapper.html
@@ -7,5 +7,5 @@
 {% endblock extra_headers %}
 
 {% block content %}
-    {{ form_html }}
+    {% include "tasks/task_inline_form.html" %}
 {% endblock content %}
