--- a/LT_UI/users/templates/users/login.html
+++ b/LT_UI/users/templates/users/login.html
@@ -4,8 +4,13 @@
     <div>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Login">
+            <table>
+                {{ form.as_table }}
+                <tr>
+                    <th></th>
+                    <td><input type="submit" value="Login"></td>
+                </tr>
+            </table>
         </form>
     </div>
 {% endblock content %}
