--- a/LT_UI/tasks/templates/tasks/task_list.html
+++ b/LT_UI/tasks/templates/tasks/task_list.html
@@ -7,7 +7,7 @@
 {% endblock extra_headers %}
 
 {% block content %}
-    <h2>Your tasks</h2>
+    <h2>Your Tasks</h2>
     {% for task in task_list %}
         <p>
             <span>
@@ -25,6 +25,8 @@
         </p>
         <hr>
     {% endfor %}
-    <a href="{% url 'task-create' %}"><button type="button">Create New Task</button></a>
+    <h2>Create New Task</h2>
+    <a href="{% url 'task-create-zip' %}"><button type="button">From Zip Archive</button></a>
+    <a href="{% url 'task-create-files' %}"><button type="button">From File List</button></a>
     <a href="{% url 'logout' %}" id="logout"><button type="button">Logout</button></a>
 {% endblock content %}
