--- a/LT_UI/users/templates/users/user.html
+++ b/LT_UI/users/templates/users/user.html
@@ -2,5 +2,6 @@
 
 {% block content %}
     <p>{{ object.username }}</p>
-    <p><a href="{% url 'logout' %}">Logout</a></p>
+    <p>{{ object.verification }}</p>
+    <p><a href="{% url 'cas_ng_logout' %}">Logout</a></p>
 {% endblock %}
