--- a/LT_UI/tasks/templates/tasks/task_list.html
+++ b/LT_UI/tasks/templates/tasks/task_list.html
@@ -7,6 +7,10 @@
 {% endblock extra_headers %}
 
 {% block content %}
+    <div id="logout">Currently logged in as {{ user.get_username }} <a href="{% url 'logout' %}"><button type="button">Logout</button></a></div>
+    {# <a href="{% url 'task-create-zip' %}"><button type="button">From Zip Archive</button></a> #}
+    <a href="{% url 'task-create' %}"><button type="button">Create Task</button></a>
+    <a href="{% url 'task-return' %}"><button type="button">Submit Task</button></a>
     <h2>Your Tasks</h2>
     {% for task in task_list %}
         <p>
@@ -19,20 +23,26 @@
                 <span class="{{ task.status|lower }}">{{ task.get_status_display }}</span>
             </span>
             <span class="download">
-                <a href="{% url 'task-download-source' task.id %}"><button type="button">Source</button></a>
+                {% comment "Broken since task remodelling" %}
+                    <a href="{% url 'task-download-source' task.id %}"><button type="button">Source</button></a>
+                    {% if task.status == task.DONE %}
+                        <a href="{% url 'task-download-result' task.id %}"><button type="button">Result</button></a>
+                        <a href="{% url 'task-download-log' task.id %}"><button type="button">Log</button></a>
+                    {% else %}
+                        <button type="button" disabled>Result</button>
+                        <button type="button" disabled>Log</button>
+                    {% endif %}
+                {% endcomment %}
                 {% if task.status == task.DONE %}
-                    <a href="{% url 'task-download-result' task.id %}"><button type="button">Result</button></a>
-                    <a href="{% url 'task-download-log' task.id %}"><button type="button">Log</button></a>
+                    <a href="{% url 'task-download-resources' task.id %}"><button type="button">Download Resources</button></a>
                 {% else %}
-                    <button type="button" disabled>Result</button>
-                    <button type="button" disabled>Log</button>
+                    <button type="button" disabled>Download Resources</button>
                 {% endif %}
             </span>
         </p>
         <hr>
     {% endfor %}
-    <h2>Create New Task</h2>
-    <a href="{% url 'task-create-zip' %}"><button type="button">From Zip Archive</button></a>
-    <a href="{% url 'task-create-files' %}"><button type="button">From File List</button></a>
-    <a href="{% url 'logout' %}" id="logout"><button type="button">Logout</button></a>
+    {# <a href="{% url 'task-create-zip' %}"><button type="button">From Zip Archive</button></a> #}
+    <a href="{% url 'task-create' %}"><button type="button">Create Task</button></a>
+    <a href="{% url 'task-return' %}"><button type="button">Submit Task</button></a>
 {% endblock content %}
